# revim

./: .gitignore  AGENTS.md  Justfile  biome.json  package.json  sonar-project.properties  tui-test.config.ts
.opencode/: kiss-spec.json  opencode.jsonc
.opencode/agents/: acceptance-reviewer.md  code-reviewer.md  implementer.md  planner.md  research.md
.opencode/plugins/: subagent-completion.ts
.scannerwork/: report-task.txt
app/: package.json  tsconfig.json
app/src/: index.ts  log.ts  terminal-key.ts
docs/: architecture.md  git-workflow.md  learnings.md  product.md  testing-strategy.md
docs/learnings/: aha.md  context.md  friction.md
lib/: Cargo.toml  index.d.ts  index.js  package.json  revim-lib.linux-x64-gnu.node
lib/src/: lib.rs  tui.rs
lib/src/tui/: api.rs  log.rs  mod.rs  render.rs  state.rs
stories/001-napi-ffi-poc/: story.md
stories/002-add-ratatui-tui/: story.md
stories/003-add-terminal-testing/: story.md
stories/005-fork-vim-monaco/: story.md
stories/006-ctrl-c-exit-visual-mode/: story.md
stories/007-add-undo-redo/: story.md
stories/008-add-status-bar/: story.md
stories/009-fix-cursor-undo-regressions/: story.md
stories/010-vim-search/: story.md
stories/011-remove-key-alias-mapping/: story.md
stories/012-add-scroll-support/: story.md
stories/013-add-logging-api/: story.md
stories/014-improve-testing-dry-keys/: story.md
stories/016-code-review-fixes/: story.md
stories/017-code-review-round-two/: story.md
stories/018-code-review-cleanup/: ACCEPTANCE.md  story.md
stories/019-cli-file-open/: ACCEPTANCE.md  (+1 more)
(+80 files in other folders)
