[package]
name = "revim-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", features = ["tokio_rt", "async"] }
napi-derive = "3.5.2"
tokio = { version = "1", features = ["full"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
regex = "1"
serial_test = "3"